refactor: 정적 팩토리 메소드를 적용한 domain 의 생성자 private
정적 팩토리 메소드를 적용한 도메인에 대해서 private 생성자로 접근제어자 수정